Fix #3840 (Firefox: fix alignment of buttons)

--- a/warehouse/static/sass/blocks/_package-snippet.scss
+++ b/warehouse/static/sass/blocks/_package-snippet.scss
@@ -76,7 +76,7 @@
   }
 
   &__buttons {
-    width: 165px;
+    width: 170px;
 
     .button {
       display: inline-block;
